JWT Authentication implemented with role definition

--- a/OnlineStoreWeb.API/appsettings.json
+++ b/OnlineStoreWeb.API/appsettings.json
@@ -8,5 +8,11 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=ECommerceDB;User Id=postgres;Password=1234;"
+  },
+  "Jwt": {
+    "Key": "YourSecretKeyHere12345678901234567890",
+    "Issuer": "OnlineStoreWebAPI",
+    "Audience": "OnlineStoreClient",
+    "DurationInMinutes": 60
   }
 }
