--- a/OnlineStoreWeb.API/appsettings.json
+++ b/OnlineStoreWeb.API/appsettings.json
@@ -7,12 +7,12 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Port=5432;Database=ECommerceDB;User Id=postgres;Password=1234;"
+    "DefaultConnection": "CONNECTION_STRING_IN_ENV_FILE"
   },
   "Jwt": {
-    "Key": "YourSecretKeyHere12345678901234567890",
-    "Issuer": "OnlineStoreWebAPI",
-    "Audience": "OnlineStoreClient",
-    "DurationInMinutes": 60
+    "Key": "JWT_SECRET_IN_ENV_FILE",
+    "Issuer": "JWT_ISSUER_IN_ENV_FILE",
+    "Audience": "JWT_AUDIENCE_IN_ENV_FILE",
+    "DurationInMinutes": 120
   }
 }
