--- a/ECommerce.API/.env.example
+++ b/ECommerce.API/.env.example
@@ -1,12 +1,13 @@
 ASPNETCORE_ENVIRONMENT=Development
 ASPNETCORE_URLS=http://localhost:5076
 
-JWT_SECRET=your_secret_key_here
+JWT_SECRET=YourSecretKeyHere
 JWT_ISSUER=OnlineStoreWebAPI
 JWT_AUDIENCE=OnlineStoreClient
-JWT_EXPIRATION_MINUTES=120
-
-DB_CONNECTION_STRING=Server=localhost;Port=5432;Database=YourDatabaseName;User Id=your_username;Password=your_password;
+JWT_ACCESS_TOKEN_EXPIRATION_MINUTES=30
+JWT_REFRESH_TOKEN_EXPIRATION_DAYS=30
+REDIS_CONNECTION_STRING=localhost:6379,abortConnect=false
+DB_CONNECTION_STRING=Server=localhost;Port=5432;Database=ECommerceDB;User Id=postgres;Password=your_password;
 
 ADMIN_TOKEN=your_admin_token_here
-USER_TOKEN=your_user_token_here 
+USER_TOKEN=your_user_token_here
