--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,11 +7,16 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
-      - JWT_SECRET=your-super-secret-key-here
+      - JWT_SECRET=YourSecretKeyHere12345678901234567890
       - JWT_ISSUER=OnlineStoreWebAPI
       - JWT_AUDIENCE=OnlineStoreClient
+      - JWT_ACCESS_TOKEN_EXPIRATION_MINUTES=30
+      - JWT_REFRESH_TOKEN_EXPIRATION_DAYS=30
       - DB_CONNECTION_STRING=Host=db;Port=5432;Database=ECommerceDB;Username=postgres;Password=1234
       - REDIS_CONNECTION_STRING=redis:6379
+      - IYZICO_API_KEY=YourIyzicoApiKey
+      - IYZICO_SECRET_KEY=YourIyzicoSecretKey
+      - IYZICO_BASE_URL=https://sandbox-api.iyzipay.com
     ports:
       - "8080:8080"
     depends_on:
