--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,9 @@ JWT_AUDIENCE=OnlineStoreClient
 JWT_ACCESS_TOKEN_EXPIRATION_MINUTES=30
 JWT_REFRESH_TOKEN_EXPIRATION_DAYS=30
 
+USER_TOKEN=
+ADMIN_TOKEN=
+
 DB_CONNECTION_STRING=Server=localhost;Port=5432;Database=ECommerceDB;User Id=postgres;Password=your_password;
 
 IYZICO_API_KEY=your-sandbox-api-key-here
