Add AWS S3 integration for product image uploads.

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,11 @@ JWT_REFRESH_TOKEN_EXPIRATION_DAYS=30
 USER_TOKEN=
 ADMIN_TOKEN=
 
+AWS_ACCESS_KEY=your-access-key-here
+AWS_SECRET_KEY=your-secret-key-here
+AWS_REGION=eu-central-1
+AWS_BUCKET_NAME=your-bucket-name-here
+
 DB_CONNECTION_STRING=Server=localhost;Port=5432;Database=ECommerceDB;User Id=postgres;Password=your_password;
 
 IYZICO_API_KEY=your-sandbox-api-key-here
