--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,13 +6,14 @@ services:
       context: .
       dockerfile: Dockerfile
     environment:
+      - ASPNETCORE_URLS=http://+:8080
       - JWT_SECRET=${JWT_SECRET:-YourSecretKeyHere12345678901234567890}
       - JWT_ISSUER=${JWT_ISSUER:-OnlineStoreWebAPI}
       - JWT_AUDIENCE=${JWT_AUDIENCE:-OnlineStoreClient}
       - JWT_ACCESS_TOKEN_EXPIRATION_MINUTES=${JWT_ACCESS_TOKEN_EXPIRATION_MINUTES:-30}
       - JWT_REFRESH_TOKEN_EXPIRATION_DAYS=${JWT_REFRESH_TOKEN_EXPIRATION_DAYS:-30}
       - DB_CONNECTION_STRING=Host=db;Port=5432;Database=ECommerceDB;Username=${POSTGRES_USER:-postgres};Password=${POSTGRES_PASSWORD:-1234}
-      - REDIS_CONNECTION_STRING=redis:6379
+      - REDIS_CONNECTION_STRING=redis:6380
       - IYZICO_API_KEY=${IYZICO_API_KEY:-YourIyzicoApiKey}
       - IYZICO_SECRET_KEY=${IYZICO_SECRET_KEY:-YourIyzicoSecretKey}
       - IYZICO_BASE_URL=${IYZICO_BASE_URL:-https://sandbox-api.iyzipay.com}
@@ -73,7 +74,7 @@ services:
   redis:
     image: redis:7
     ports:
-      - "6379:6379"
+      - "6380:6379"
     command: redis-server --appendonly yes
     volumes:
       - redis_data:/data
