feat: add Elasticsearch service configuration and product search functionality, w- minor bug fixes

--- a/ECommerce.Tests/ECommerce.Tests.csproj
+++ b/ECommerce.Tests/ECommerce.Tests.csproj
@@ -32,6 +32,7 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
+    <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.13.0" />
   </ItemGroup>
 
   <ItemGroup>
