--- a/ECommerce.Presentation/ECommerce.Presentation.csproj
+++ b/ECommerce.Presentation/ECommerce.Presentation.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="AWSSDK.S3" Version="4.0.1.1" />
     <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.13.0" />
     <PackageReference Include="MediatR" Version="12.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.1.0" />
     <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="9.0.2" />
     <PackageReference Include="Serilog" Version="4.2.0" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
