--- a/ECommerce.Tests/ECommerce.Tests.csproj
+++ b/ECommerce.Tests/ECommerce.Tests.csproj
@@ -33,6 +33,9 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="8.0.0" />
     <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.13.0" />
+    <PackageReference Include="MongoDB.Driver" Version="3.4.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.3" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.3" />
   </ItemGroup>
 
   <ItemGroup>
