--- a/ECommerce.Application/ECommerce.Application.csproj
+++ b/ECommerce.Application/ECommerce.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <TargetFramework>net9.0</TargetFramework>
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\ECommerce.Domain\ECommerce.Domain.csproj" />
+		<ProjectReference Include="..\ECommerce.Shared\ECommerce.Shared.csproj" />
     </ItemGroup>
 
     <ItemGroup>
