--- a/ECommerce.Domain/ECommerce.Domain.csproj
+++ b/ECommerce.Domain/ECommerce.Domain.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.2.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
         <PackageReference Include="MongoDB.Bson" Version="3.4.0" />
         <PackageReference Include="System.Text.Json" Version="9.0.3" />
     </ItemGroup>
