--- a/ECommerce.Domain/ECommerce.Domain.csproj
+++ b/ECommerce.Domain/ECommerce.Domain.csproj
@@ -13,4 +13,8 @@
         <PackageReference Include="System.Text.Json" Version="9.0.3" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\ECommerce.Shared\ECommerce.Shared.csproj" />
+    </ItemGroup>
+
 </Project>
