--- a/ECommerce.Presentation/ECommerce.Presentation.csproj
+++ b/ECommerce.Presentation/ECommerce.Presentation.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ECommerce.Application\ECommerce.Application.csproj" />
     <ProjectReference Include="..\ECommerce.Infrastructure\ECommerce.Infrastructure.csproj" />
+	<ProjectReference Include="..\ECommerce.Shared\ECommerce.Shared.csproj" />
   </ItemGroup>
 
   <ItemGroup>
