web feature: forgot password page added

--- a/ECommerce.Web/Properties/launchSettings.json
+++ b/ECommerce.Web/Properties/launchSettings.json
@@ -1,23 +1,25 @@
-﻿{
-  "$schema": "https://json.schemastore.org/launchsettings.json",
+{
   "profiles": {
     "http": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5072",
+      "launchUrl": "http://localhost:5076/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "http://localhost:5076/"
     },
     "https": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7105;http://localhost:5072",
+      "launchUrl": "https://localhost:5076/",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": true,
+      "applicationUrl": "https://localhost:7105;http://localhost:5076"
     }
-  }
+  },
+  "$schema": "https://json.schemastore.org/launchsettings.json"
 }
